# porkbun-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  main.rs
